msg-lib